<resources>
    <string name="app_name">Sobat</string>
    <string name="sapaan">Hai, Mums!</string>
    <string name="ajakan">Ayo pantau tumbuh kembang si Kecil!</string>
    <string name="namaAnak">Budi Susanto</string>
    <string name="masuk">Masuk tahun ke-2</string>
    <string name="umur">2 Tahun</string>
    <string name="captionTambah">Tambahkan data si Kecil di sini!</string>
    <string name="buttonTmbh">Tambah Anak</string>
    <string name="menu">Menu</string>
    <string name="catat">Catat</string>
    <string name="forum">Forum</string>
    <string name="konsul">Konsultasi</string>
    <string name="imun">Imunisasi</string>
    <string name="judulBerita">Bagaimana Caranya Agar si Kecil Doyan Makan Terus?</string>

    <string name="home">Home</string>

    <string name="namaIbu">Santika Putri</string>
    <string name="detailPosting">Diposting 1 jam yang lalu</string>
    <string name="judulForum">Anakku suka bersin kalo dekat sama kucing rumah.</string>

    <string name="detail">Detail</string>
    <string name="tmbhProfil">Tambah Profil Anak</string>

    <string name="vaksinImun">Vaksin &amp; Imunisasi</string>
    <string name="detailVaksinImun">Ayo cek status vaksinasi dan status imunisasi sobat kecil!</string>
    <string name="bantuanMedis">Bantuan Medis</string>
    <string name="detailBantuanMedis">Butuh bantuan lain dari pihak profesional? Cari dari sini!</string>
    <string name="rsAnak">RS Anak Terdekat</string>
    <string name="detailRs">Cari disini rumah sakit anak terdekat!</string>

    <string name="profAnak">Profil Anak</string>
    <string name="info">Informasi Sobat Kecil</string>

    <string name="labelNamaAnak">Nama Anak</string>
    <string name="labelTglLhrAnak">Tanggal Lahir Anak</string>
    <string name="labelGenderAnak">Gender Anak</string>

    <string name="infoIbu">Informasi Mums</string>
    <string name="labelNama">Nama</string>
    <string name="labelTglLhr">Tanggal Lahir</string>
    <string name="labelNoTelp">Nomor Telepon</string>

    <string name="btnProfilAnak">Ubah Profil Anak</string>
    <string name="profil">Profil</string>

    <string name="pr">Perempuan</string>
    <string name="tglLhrIbu">18 Jan 1995</string>

    <string name="btnProfilIbu">Ubah Profil Ibu</string>
    <string name="sobatKcl">Sobat Kecil Mums</string>
    <string name="general">General</string>

    <string name="pengaturan">Pengaturan</string>
    <string name="logout">Logout</string>
    <string name="bug">Laporkan Bug</string>

    <string name="konsulOnline">Konsultasi Online</string>

    <string name="lorem">Lorem Ipsum</string>
    <string name="lorem10">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</string>
    <string name="lorem5">Lorem ipsum dolor sit amet, consectetur.</string>
    <string name="lorem20">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="waktu">12 jam lalu</string>

    <string name="jdlLogin">Hai, Mums! Selamat Datang Kembali!</string>
    <string name="subLogin">Mari lanjut pantau tumbuh kembang si Kecil!</string>

    <string name="btnLogin">Masuk ke Sobat!</string>

    <string name="username">Username</string>
    <string name="pass">Password</string>
    <string name="nama">Nama</string>
    <string name="noTelp">Nomor Telepon</string>
    <string name="tglLahir">Tanggal Lahir</string>

    <string name="jdlRegister">Hai, Mums! Selamat Datang di Aplikasi Sobat!</string>

    <string name="subRegister">Ayo daftarkan data diri Mums!</string>
    <string name="reg">Buat Akun Sobat</string>

    <string name="data">Data Sebelumnya</string>
    <string name="isiData">11</string>
    <string name="kg">kg berat badan</string>

    <string name="kat">Kategori</string>
    <string name="jenisKat">Sehat</string>
    <string name="bb">range berat badan</string>

    <string name="tambahData">Tambah Data Anak</string>

    <string name="notifJudul">Notifikasi</string>
    <string name="notif1">Sartika Not Putri menjawab pertanyaanmu!</string>
    <string name="notif_waktu">12 jam yang lalu.</string>

    <string name="labelTglData">Tanggal Data</string>
    <string name="labelBerat">Berat Anak (cm)</string>
    <string name="labelTinggi">Tinggi Anak (cm)</string>
    <string name="labelLingkarKepala">Lingkar Kepala Anak (cm)</string>

    <string name="mulaiKonsul">Mulai Konsultasi</string>
    <string name="dokUmum">Dokter Umum</string>
    <string name="dokAnak">Dokter Spesialis Anak</string>

    <string name="namaDok1">Lisa Susan</string>
    <string name="namaDok2">Butet</string>
    <string name="namaDok3">Antanasia</string>
    <string name="namaDok4">Buhanny</string>

    <string name="riwayatKonsul">Riwayat Konsultasi</string>


</resources>