<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="30dp"
        android:paddingTop="20dp"
        android:paddingEnd="30dp">
        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/arrow_back">
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:paddingRight="30dp"
        android:paddingTop="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jdlRegister"
            android:textColor="@color/hitam"
            android:textSize="@dimen/judul"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subRegister"
            android:textColor="@color/hijauTua"
            android:textSize="@dimen/fntBsr"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            android:textColor="@color/hitam"
            android:textSize="@dimen/fntSdg"
            android:textStyle="bold"
            android:layout_marginTop="30dp"/>
        <EditText
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginTop="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/edit_text"
            android:textColor="@color/hijauTua"
            android:textSize="@dimen/fntBsr"
            android:hint="@string/nama"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noTelp"
            android:textColor="@color/hitam"
            android:textSize="@dimen/fntSdg"
            android:layout_marginTop="20dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/noTelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginTop="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/edit_text"
            android:textColor="@color/hijauTua"
            android:textSize="@dimen/fntBsr"
            android:hint="@string/noTelp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tglLahir"
            android:textColor="@color/hitam"
            android:textSize="@dimen/fntSdg"
            android:layout_marginTop="20dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/tglLahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:layout_marginTop="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/edit_text"
            android:textColor="@color/hijauTua"
            android:textSize="@dimen/fntBsr"
            android:hint="@string/tglLahir"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/hitam"
            android:textSize="@dimen/fntSdg"
            android:layout_marginTop="20dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginTop="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/edit_text"
            android:textColor="@color/hijauTua"
            android:textSize="@dimen/fntBsr"
            android:hint="@string/username"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass"
            android:textColor="@color/hitam"
            android:textSize="@dimen/fntSdg"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginTop="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/edit_text"
            android:textColor="@color/hijauTua"
            android:textSize="@dimen/fntBsr"
            android:hint="@string/pass"/>

        <LinearLayout
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fntBsr"
                android:textColor="@color/putih"
                android:textStyle="bold"
                android:text="@string/btnLogin">
            </TextView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>