<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailCatat">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="30dp"
        android:paddingTop="20dp"
        android:paddingEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/tombolBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:gravity="end|top"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/back"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:background="@drawable/arrow_back">

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/detail"
                android:textColor="@color/hitam"
                android:textSize="@dimen/judul"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/notification"
            android:backgroundTint="@color/putih"
            android:gravity="end|top">
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="440dp"
        android:background="@drawable/grafik"
        android:layout_marginTop="10dp">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/kotak_forum"
            android:padding="20dp"
            android:orientation="horizontal"
            android:gravity="center">
            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data"
                    android:textColor="@color/hitam"
                    android:textSize="@dimen/fntKcl"
                    android:gravity="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/beratBadan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/isiData"
                    android:textColor="@color/kuningTua"
                    android:textSize="@dimen/judul"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kg"
                    android:textColor="@color/hitam"
                    android:layout_marginTop="10dp"
                    android:textSize="@dimen/fntKcl"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/hijauTua"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/kat"
                    android:textColor="@color/hitam"
                    android:textSize="@dimen/fntKcl"
                    android:gravity="center"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/jenisKat"
                    android:textColor="@color/hijauSdg"
                    android:textSize="@dimen/judul"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bb"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/hitam"
                    android:textSize="@dimen/fntKcl"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tambahDataFisik"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fntBsr"
                android:textColor="@color/putih"
                android:textStyle="bold"
                android:text="@string/tambahData">
            </TextView>
            <LinearLayout
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/icon_edit">
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>