<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UpdateProfilAnak">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="30dp"
        android:paddingTop="20dp"
        android:paddingEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/tombolBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:gravity="end|top"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:background="@drawable/arrow_back">

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/profAnak"
                android:textColor="@color/hitam"
                android:textSize="@dimen/judul"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tombolNotif"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/notification"
            android:gravity="end|top">
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="45dp"
        android:gravity="center">
        <LinearLayout
            android:layout_width="96dp"
            android:layout_height="94dp"
            android:gravity="end|top"
            android:background="@drawable/anak_add_photo">
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/namaAnak"
            android:textColor="@color/hitam"
            android:textSize="@dimen/judul"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:background="@drawable/kotak_besar"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:textColor="@color/hijauTua"
            android:textSize="@dimen/judul"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelNamaAnak"
            android:textColor="@color/hitam"
            android:textSize="@dimen/subjudul"
            android:layout_marginTop="20dp"/>
        <EditText
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/edit_text"
            android:textColor="@color/hijauTua"
            android:textSize="@dimen/fntBsr"
            android:hint="@string/namaAnak"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelTglLhrAnak"
            android:textColor="@color/hitam"
            android:textSize="@dimen/subjudul"
            android:layout_marginTop="20dp"/>
        <EditText
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/edit_text"
            android:textColor="@color/hijauTua"
            android:textSize="@dimen/fntBsr"
            android:hint="@string/namaAnak"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelGenderAnak"
            android:textColor="@color/hitam"
            android:textSize="@dimen/subjudul"
            android:layout_marginTop="20dp"/>
        <EditText
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/edit_text"
            android:textColor="@color/hijauTua"
            android:textSize="@dimen/fntBsr"
            android:hint="@string/namaAnak"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fntBsr"
                android:textColor="@color/putih"
                android:textStyle="bold"
                android:text="@string/btnProfilAnak">
            </TextView>
            <LinearLayout
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/icon_edit">
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>